# godly-terminal

./: .gitignore  .mcp.json  .mcp.json.bak  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.template.md  LICENSE  README.md  demo.md  how_to_notifications.md  index.html  install.ps1  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  production_build.ps1  run-e2e.ps1  setup_mcp.md  setup_mcp.ps1  timeline.html  tsconfig.e2e.json  vite.config.ts  vitest.config.ts  vitest.workspace.ts
src-tauri/: .taurignore  Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json  tauri.conf.staging.json  tauri.conf.test.json
src-tauri/.cargo/: config.toml
src-tauri/.cargo-worker/: .global-cache
src-tauri/.config/: nextest.toml
src-tauri/capabilities/: default.json
src-tauri/daemon/: Cargo.toml
src-tauri/daemon/src/: debug_log.rs  main.rs  pid.rs  scrollback_budget.rs  server.rs  session.rs  shim_client.rs  shim_metadata.rs
src-tauri/daemon/src/handlers/: attach.rs  close_session.rs  context.rs  create_session.rs  detach.rs  get_last_output_time.rs  list_sessions.rs  mod.rs  pause_session.rs  read_buffer.rs  read_grid.rs  read_grid_text.rs  read_rich_grid.rs  read_rich_grid_diff.rs  resize.rs  resume_session.rs  scroll_and_read_rich_grid.rs  search_buffer.rs  set_scrollback.rs  write.rs
src-tauri/daemon/tests/: adaptive_batching.rs  arrow_up_history_latency.rs  cold_switch_latency.rs  ctrl_c_interrupt.rs  handler_starvation.rs  input_latency.rs  input_latency_full_path.rs  memory_stress.rs  paste_image_freeze.rs  pause_resume.rs  quick_claude_enter.rs  quick_claude_trust_prompt.rs  read_grid.rs  resize_during_output.rs  scroll_position_preservation.rs  session_persistence.rs  shim_isolation.rs  single_instance.rs  test_isolation_guardrail.rs  typing_rollback.rs  zombie_tabs.rs
src-tauri/godly-vt/: Cargo.toml  THIRD-PARTY-LICENSES
src-tauri/godly-vt/benches/: throughput.rs
src-tauri/godly-vt/src/: attrs.rs  callbacks.rs  cell.rs  grid.rs  lib.rs  parser.rs  perform.rs  row.rs  screen.rs  term.rs
src-tauri/godly-vt/src/image/: iterm2.rs  kitty.rs  mod.rs  sixel.rs
src-tauri/godly-vt/src/simd/: avx2.rs  mod.rs  scalar.rs  sse2.rs
src-tauri/godly-vt/src/state_machine/: mod.rs  params.rs
src-tauri/godly-vt/tests/: basic.rs  csi.rs  dirty_tracking.rs  escape.rs  osc.rs  processing.rs  regenerate_fixtures.rs  scroll.rs  scrollback_dirty_mismatch.rs  tab_switch_resize.rs  vt_compliance.rs
src-tauri/godly-vt/tests/helpers/: fixtures.rs  mod.rs
src-tauri/llm/: Cargo.toml
src-tauri/llm/src/: branch_name.rs  branch_name_engine.rs  download.rs  engine.rs  gemini.rs  lib.rs  openai_compatible.rs  prompt.rs
src-tauri/llm/tests/: download_error_quality.rs  download_url_parsing.rs  gemini_3_response_regression.rs  gemini_response_parsing.rs
src-tauri/mcp/: Cargo.toml  build.rs
src-tauri/mcp/src/: app_backend.rs  backend.rs  daemon_direct.rs  handler.rs  http_server.rs  jsonrpc.rs  log.rs  main.rs  pipe_client.rs  session.rs  sse.rs  tools.rs
src-tauri/native/app-adapter/: Cargo.toml
src-tauri/native/app-adapter/src/: clipboard.rs  commands.rs  daemon_client.rs  event_loop.rs  keys.rs  lib.rs  mcp_pipe.rs  ports.rs  shortcuts.rs  sound.rs  whisper.rs
src-tauri/native/app-adapter/tests/: port_contracts.rs
src-tauri/native/features-shell/: Cargo.toml
src-tauri/native/features-shell/src/: layout.rs  lib.rs  tabs.rs  workspaces.rs
src-tauri/native/features-shell/tests/: reducer_flows.rs
src-tauri/native/iced-shell/: Cargo.toml
src-tauri/native/iced-shell/src/: app.rs  claude_md_editor.rs  confirm_dialog.rs  lib.rs  main.rs  mcp_handler.rs  mru_switcher.rs  notification_state.rs  notifications.rs  perf_overlay.rs  quick_claude.rs  scrollback_restore.rs  scrollbar.rs  (+17 more)
src-tauri/native/layout-core/: Cargo.toml
src-tauri/native/parity-harness/: Cargo.toml
src-tauri/native/ports/: Cargo.toml
src-tauri/native/tabs-core/: Cargo.toml
src-tauri/native/terminal-surface/: Cargo.toml
src-tauri/native/testkit/: Cargo.toml
src-tauri/native/workspaces-core/: Cargo.toml
src-tauri/notify/: Cargo.toml
src-tauri/notify/src/: main.rs
src-tauri/protocol/: Cargo.toml
src-tauri/protocol/benches/: snapshot_serialization.rs
src-tauri/protocol/bindings/: CursorState.ts  DaemonMessage.ts  Event.ts  GridData.ts  GridDimensions.ts  Request.ts  Response.ts  RichGridCell.ts  RichGridData.ts  RichGridDiff.ts  RichGridRow.ts  SessionInfo.ts  ShellType.ts  ShimMetadata.ts
src-tauri/protocol/src/: ansi.rs  binary_diff.rs  frame.rs  keys.rs  layout_tree.rs  lib.rs  mcp_messages.rs  messages.rs  types.rs  whisper.rs
src-tauri/pty-shim/: Cargo.toml
src-tauri/pty-shim/src/: main.rs  metadata.rs  protocol.rs  pty.rs  ring_buffer.rs
src-tauri/remote/: Cargo.toml  start-phone.ps1
src-tauri/remote/src/: auth.rs  config.rs  daemon_client.rs  detection.rs  device_lock.rs  event_pump.rs  layout_reader.rs  main.rs  monitor.rs  sse_ticket.rs  ws.rs
src-tauri/remote/static/: phone.html
src-tauri/renderer/: Cargo.toml
src-tauri/renderer/benches/: gpu_render.rs
src-tauri/renderer/src/: atlas.rs  color.rs  device.rs  lib.rs  pipeline.rs  renderer.rs  theme.rs
src-tauri/renderer/tests/: render_test.rs
src-tauri/soundpacks/default/: manifest.json
src-tauri/src/: custom_protocols.rs  github_auth.rs  gpu_renderer.rs  lib.rs  llm_state.rs  main.rs  sidecar.rs  whisper_client.rs  whisper_state.rs  window_lifecycle.rs  worktree.rs
src-tauri/src/commands/: files.rs  gpu_render.rs  grid.rs  llm.rs  log.rs  mod.rs  plugins.rs  shell.rs  soundpacks.rs  sounds.rs  terminal.rs  whisper.rs  workspace.rs  worktree.rs  wsl.rs
src-tauri/src/daemon_client/: bridge.rs  client.rs  mod.rs
src-tauri/src/mcp_server/: handler.rs  mod.rs
src-tauri/src/persistence/: autosave.rs  layout.rs  mod.rs  scrollback.rs
src-tauri/src/pty/: manager.rs  mod.rs  process_monitor.rs
src-tauri/src/state/: app_state.rs  mod.rs  models.rs
src-tauri/src/utils/: mod.rs  path.rs  process.rs
src-tauri/whisper/: Cargo.toml
src-tauri/whisper/src/: audio.rs  main.rs  pipe_server.rs  transcribe.rs
(+1723 files in other folders)
