[workspace]
members = [".", "protocol", "daemon", "mcp", "notify", "godly-vt", "remote", "llm"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
godly-protocol = { path = "protocol" }

[workspace.dependencies.winapi]
version = "0.3"
features = [
    "processthreadsapi",
    "handleapi",
    "psapi",
    "tlhelp32",
    "winbase",
    "wincon",
    "namedpipeapi",
    "fileapi",
    "errhandlingapi",
    "synchapi",
    "timeapi",
    "winerror",
    "winnt",
    "jobapi2",
]

[package]
name = "godly-terminal"
version = "0.3.1"
description = "A Windows terminal application with workspaces"
authors = ["you"]
edition = "2021"
license = "BUSL-1.1"

[lib]
name = "godly_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
leak-check = ["dhat"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
dhat = { version = "0.3", optional = true }
tauri = { version = "2.0", features = [] }
tauri-plugin-store = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
base64 = "0.22"
godly-protocol.workspace = true
godly-llm = { path = "llm" }
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["rt"] }
parking_lot.workspace = true

[target.'cfg(windows)'.dependencies]
winapi.workspace = true

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 0
debug = 1         # line tables only — faster builds, still get backtraces
incremental = true

[profile.dev.package."*"]
opt-level = 1     # optimize deps slightly — faster runtime without slow rebuilds

[profile.release]
strip = true
lto = true
