[package]
name = "godly-daemon"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[[bin]]
name = "godly-daemon"
path = "src/main.rs"

[features]
leak-check = ["dhat"]

[dependencies]
dhat = { version = "0.3", optional = true }
godly-protocol = { path = "../protocol" }
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "handleapi",
    "psapi",
    "tlhelp32",
    "winbase",
    "wincon",
    "namedpipeapi",
    "fileapi",
    "errhandlingapi",
    "synchapi",
    "winerror",
    "winnt",
] }

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "handleapi",
    "namedpipeapi",
    "fileapi",
    "errhandlingapi",
    "synchapi",
    "winnt",
    "jobapi2",
] }

[dev-dependencies]
godly-protocol = { path = "../protocol" }
