[package]
name = "godly-daemon"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[[bin]]
name = "godly-daemon"
path = "src/main.rs"

[features]
leak-check = ["dhat"]

[dependencies]
dhat = { version = "0.3", optional = true }
godly-protocol.workspace = true
godly-vt = { path = "../godly-vt" }
portable-pty = "0.8"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
parking_lot.workspace = true
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "macros"] }

[target.'cfg(windows)'.dependencies]
winapi.workspace = true

[target.'cfg(windows)'.dev-dependencies]
winapi.workspace = true

[dev-dependencies]
godly-protocol.workspace = true
