[package]
name = "godly-vt"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-performance terminal state engine with SIMD parsing and image support"

[dependencies]
unicode-width = "0.2"
itoa = "1.0"
memchr = "2"
simdutf8 = "0.1"

[dev-dependencies]
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "throughput"
harness = false
