[package]
name = "godly-vt"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "High-performance terminal state engine with SIMD parsing and image support"

[dependencies]
unicode-width = "0.2"
itoa = "1.0"
memchr = "2"
simdutf8 = "0.1"

# Image support (Phase 3, optional)
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }
base64 = { version = "0.22", optional = true }
flate2 = { version = "1.0", optional = true }

[features]
default = ["simd"]
simd = []
images = ["image", "base64", "flate2"]

[dev-dependencies]
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "throughput"
harness = false
