[package]
name = "godly-mcp"
version = "0.1.7"
edition = "2021"
license = "BUSL-1.1"

[[bin]]
name = "godly-mcp"
path = "src/main.rs"

[dependencies]
godly-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
