[package]
name = "godly-protocol"
version = "0.4.0"
edition = "2021"
license = "BUSL-1.1"

[dependencies]
serde.workspace = true
serde_json.workspace = true
ts-rs = { version = "10", features = ["serde-compat"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "snapshot_serialization"
harness = false
