[package]
name = "godly-pty-shim"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[[bin]]
name = "godly-pty-shim"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "namedpipeapi",
    "fileapi",
    "handleapi",
    "errhandlingapi",
    "synchapi",
    "winbase",
    "winerror",
    "winnt",
    "processthreadsapi",
    "tlhelp32",
    "ioapiset",
    "minwinbase",
] }
