[package]
name = "godly-remote"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[[bin]]
name = "godly-remote"
path = "src/main.rs"

[dependencies]
godly-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"], default-features = false }
regex = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
futures = "0.3"

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
