[package]
name = "godly-iced-shell"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
description = "Native Iced + wgpu terminal shell"

[[bin]]
name = "godly-native"
path = "src/main.rs"

[dependencies]
iced.workspace = true
godly-protocol = { path = "../../protocol" }
log = "0.4"
env_logger = "0.11"
