[package]
name = "godly-iced-shell"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
description = "Native Iced + wgpu terminal shell"

[[bin]]
name = "godly-native"
path = "src/main.rs"

[dependencies]
iced.workspace = true
godly-protocol = { path = "../../protocol" }
godly-app-adapter = { path = "../app-adapter" }
godly-terminal-surface = { path = "../terminal-surface" }
log = "0.4"
env_logger = "0.11"
uuid.workspace = true
futures-channel = "0.3"
futures = "0.3"
parking_lot.workspace = true
