[package]
name = "godly-iced-shell"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
description = "Native Iced + wgpu terminal shell"

[[bin]]
name = "godly-native"
path = "src/main.rs"

[dependencies]
iced.workspace = true
godly-protocol = { path = "../../protocol" }
godly-app-adapter = { path = "../app-adapter" }
godly-terminal-surface = { path = "../terminal-surface" }
godly-layout-core = { path = "../layout-core" }
godly-features-shell = { path = "../features-shell" }
godly-tabs-core = { path = "../tabs-core" }
godly-workspaces-core = { path = "../workspaces-core" }
log = "0.4"
env_logger = "0.11"
uuid.workspace = true
futures-channel = "0.3"
futures = "0.3"
parking_lot.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
