[package]
name = "godly-parity-harness"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
description = "Test infrastructure for web-vs-native frontend parity comparison"

[dependencies]
godly-protocol = { path = "../../protocol" }
serde_json.workspace = true
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi.workspace = true

[dev-dependencies]
pretty_assertions = "1"
godly-app-adapter = { path = "../app-adapter" }
